{
    "name": "PlayerPause",
    "maps": [
        {
            "name": "PauseInAc",
            "id": "7ee63945-ee5b-463e-b1d1-4c7cc422bdfd",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "66063d2d-5ab6-452c-81ac-c6c3a84624f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bd3afdeb-6448-424d-8ca9-ffbcbea59780",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fb2c336-f57e-4720-ab94-df8711511d52",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "382b2de4-909d-4cba-9f61-5806958db652",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}